--- a/Rosenbrock_Visualization.ipynb
+++ b/Rosenbrock_Visualization.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "175a2636-b091-430b-932a-4f848e06967e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
-    "\n",
+    "# second test\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import torch\n",
