--- a/Rosenbrock_Visualization.ipynb
+++ b/Rosenbrock_Visualization.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "175a2636-b091-430b-932a-4f848e06967e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
-    "# second test\n",
-    "import numpy as np\n",
+    "\n",
+    "import numpy\n",
     "import pandas as pd\n",
     "import torch\n",
     "from torch import nn\n",
