--- a/Rosenbrock_Visualization.ipynb
+++ b/Rosenbrock_Visualization.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import time\n",
     "\n",
-    "import numpy\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import torch\n",
     "from torch import nn\n",
